corrección name formulario

--- a/app1/views/index.jade
+++ b/app1/views/index.jade
@@ -9,6 +9,6 @@ block content
       label(for="email") Correo Electrónico
       input#email.form-control(type="email", name="email")
     .form-group
-      label(for="email") Contraseña
-      input#email.form-control(type="email", name="email")
+      label(for="password") Contraseña
+      input#password.form-control(type="password", name="password")
     button(type="submit") Enviar
